@@ -1,6 +1,6 @@
 Package: Rlabkey
 Version: 2.4.0
-Date: 2020-04-02
+Date: 2020-04-03
 Title: Data Exchange Between R and 'LabKey' Server
 Author: Peter Hussey 
 Maintainer: Cory Nathe <cnathe@labkey.com>
