@@ -28,6 +28,10 @@ export(labkey.domain.drop)
 export(labkey.domain.get)
 export(labkey.domain.inferFields)
 export(labkey.domain.save)
+export(labkey.security.createContainer)
+export(labkey.security.deleteContainer)
+export(labkey.security.getContainers)
+export(labkey.security.moveContainer)
 
 S3method(print, LabkeySession)
 S3method(print, LabkeySchemaList)
