@@ -38,6 +38,10 @@ The available folders are returned as a three-column data frame containing
 {Modify data:  } \code{\link{labkey.updateRows}}, \code{\link{labkey.insertRows}}, \code{\link{labkey.importRows}}, \code{\link{labkey.deleteRows}}\cr
 {List available data: } \code{\link{labkey.getQueries}}, \code{\link{labkey.getQueryViews}}, 
 \code{\link{labkey.getQueryDetails}}, \code{\link{labkey.getDefaultViewDetails}}, \code{\link{labkey.getLookupDetails}},
+\code{\link{labkey.security.getContainers}},
+\code{\link{labkey.security.createContainer}},
+\code{\link{labkey.security.deleteContainer}},
+\code{\link{labkey.security.moveContainer}}
 }
 \examples{
 
